<resources>
    <string name="app_name">Music Distribution</string>

    <!-- Strings related to authentication -->
    <string name="title_activity_auth">AuthActivity</string>
    <string name="registration_fragment_label">Create account</string>
    <string name="button_sign_up">Sign up free</string>
    <string name="button_sign_facebook">Continue with Facebook</string>
    <string name="button_sign_google">Continue with Google</string>
    <string name="button_log_in">Log In</string>
    <string name="registration_title">Create Account</string>
    <string name="login_title">Sign into your account</string>
    <string name="login_email">Enter your username</string>
    <string name="login_password">Enter your password</string>
    <string name="user_creator">Creator</string>
    <string name="user_listener">Listener</string>

    <!-- Strings related to home -->
    <string name="title_home">Home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="button_follow">Follow</string>
    <string name="dot_text">⚫</string>

    <!-- Strings related to search -->
    <string name="search_title">Search</string>
    <string name="search_placeholder">Artists, Songs or Albums</string>
    <string name="search_favourite_genre_title">Your favourite genres</string>

    <!-- Strings related to profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_name">Your name</string>
    <string name="profile_surname">Your surname</string>
    <string name="profile_favourite_artist">Your favourite user</string>
    <string name="profile_name_placeholder">Enter your name</string>
    <string name="profile_surname_placeholder">Enter your surname</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="button_favourite_songs">Songs</string>
    <string name="button_favourite_artists">Artists</string>
    <string name="button_published_songs">Published Songs</string>
    <string name="button_published_albums">Published Albums</string>
    <string name="button_edit_profile">Edit Info</string>
    <string name="button_edit_picture">Edit Picture</string>

</resources>