<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <TextView
        android:id="@+id/txtRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/btnBackRegister"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="46dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputRegisterLayoutEmail"
        android:layout_width="286dp"
        android:layout_height="51dp"
        android:background="@android:color/transparent"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263">

        <EditText
            android:id="@+id/inputRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Enter your username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/btnEnableSearch"
        android:layout_width="286dp"
        android:layout_height="51dp"
        android:background="@color/gray"
        android:enabled="true"
        android:scrollbarSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <EditText
            android:id="@+id/inputRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="Enter your username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="208dp"
        android:layout_height="62dp"
        android:backgroundTint="@color/orange"
        android:text="@string/button_sign_up"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnableSearch"
        app:layout_constraintVertical_bias="0.475" />

    <TextView
        android:id="@+id/txtInputEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/txtInputPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <RadioGroup
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnableSearch">

        <RadioButton
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/radio_text_color"
            android:elevation="8dp"
            android:text="@string/user_creator" />

        <RadioButton
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selector"
            android:textColor="@drawable/radio_text_color"
            android:elevation="8dp"
            android:text="@string/user_listener" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>