<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.WelcomeFragment">

    <ImageView
        android:id="@+id/logoWelcomeScreen"
        android:layout_width="268dp"
        android:layout_height="258dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="256dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/orange"
        android:text="@string/button_sign_up"
        android:textColor="@color/white"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoWelcomeScreen"
        app:layout_constraintVertical_bias="0.063" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogIn"
        android:layout_width="256dp"
        android:layout_height="38dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:text="@string/button_log_in"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignFacebook"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:background="@drawable/border"
        android:text="@string/button_sign_facebook"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/txtNoteGoogleLogin"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/note_oauth_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSignGoogle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSignGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnSignGoogle"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/txtNoteFacebookLogin"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/note_oauth_login"
        app:layout_constraintBottom_toTopOf="@+id/btnSignGoogle"
        app:layout_constraintEnd_toEndOf="@+id/btnSignFacebook"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSignFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnSignFacebook"
        app:layout_constraintVertical_bias="0.023" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignGoogle"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:background="@drawable/border"
        android:text="@string/button_sign_google"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignFacebook"
        app:layout_constraintVertical_bias="0.432"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>